# DEMToolbox

./: .gitignore  CHANGELOG.md  README.md  launch_benchmarking.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: continuous_integration.yml
DEMToolbox/: __init__.py  setup.py
DEMToolbox/classes/: __init__.py  mesh_class.py  particle_attribute.py  particle_samples.py  process_simulation_timestep.py  slice_class.py  split_class.py  velocity_class.py
DEMToolbox/meshing/: __init__.py  mesh_1d.py  mesh_2d.py  mesh_3d.py  mesh_3d_cylinder.py  slice.py  split.py
DEMToolbox/mixing/: README.md  __init__.py  homogeneity_index.py  lacey_mixing.py  lacey_mixing_curve_fit.py  lacey_mixing_index.py  macro_lacey.py
DEMToolbox/particle_attributes/: __init__.py  mean_sample_attribute.py  split.py
DEMToolbox/particle_sampling/: __init__.py  sample_1d.py  sample_1d_volume.py  sample_1d_volume_cylinder.py  sample_2d.py  sample_2d_slice.py  sample_3d.py  sample_3d_cylinder.py
DEMToolbox/segregation/: __init__.py  mean_mesh_radii.py
DEMToolbox/utilities/: __init__.py  append_column.py
DEMToolbox/velocity/: README.md  __init__.py  mean_velocity_vector_field.py  velocity_vector_field.py
DEMToolkit/: __init__.py
DEMToolkit/classes/: __init__.py  particle_samples.py
DEMToolkit/particle_sampling/: __init__.py
DEMToolkit/utilities/: append_attribute.py
examples/: equal_volume_sampling.py  equal_volume_sampling_cylinder.py  meshing.py  mixing.py  mixing_curvefit.py  particle_sampling.py  segregation.py  velocity.py
prototyping/: mesh_1300000.vtk  test.py
(+345 files in other folders)
